syntax = "proto3";
option go_package = "github.com/rancher/opni/pkg/plugins/apis/capability";

import "google/protobuf/empty.proto";
import "github.com/rancher/opni/pkg/apis/core/v1/core.proto";

package capability;

service Backend {
  rpc Info(google.protobuf.Empty) returns (InfoResponse);
  rpc CanInstall(google.protobuf.Empty) returns (google.protobuf.Empty);
  rpc Install(InstallRequest) returns (google.protobuf.Empty);
  rpc Uninstall(UninstallRequest) returns (google.protobuf.Empty);
  rpc InstallerTemplate(google.protobuf.Empty) returns (InstallerTemplateResponse);
}

message InfoResponse {
  string capabilityName = 1;
}

message InstallRequest {
  core.Reference cluster = 1;
}

message UninstallRequest {
  core.Reference cluster = 1;
}

message InstallerTemplateResponse {
  string template = 1;
}