syntax = "proto3";
option go_package = "github.com/rancher/opni/plugins/example/pkg/example";

import "google/protobuf/empty.proto";
import "google/api/annotations.proto";

package example;

service ExampleAPIExtension {
  rpc Echo(EchoRequest) returns (EchoResponse) {
    option (google.api.http) = {
      post: "/echo"
      body: "*"
    };
  }
}

service ExampleUnaryExtension {
  rpc Hello(google.protobuf.Empty) returns (EchoResponse);
}

message EchoRequest {
  string message = 1;
}

message EchoResponse {
  string message = 1;
}